# ne

./: .bumpversion.cfg  CHANGES  CITATION.cff  INSTALL  INSTALL.md  NEWS  README  README.md  extensions  makefile  ne.spec  version.pl
.github/workflows/: gh-pages.yml
doc/: .gitignore  default.keys  default.menus  makefile  ne.1  ne.texinfo  texinfo.cnf  texinfo.cnf.in  texinfo.tex  version.pl  version.texinfo
macros/: DeleteSOL  aspell
src/: .gitignore  TODO  actions.c  ansi.c  ansi.h  autocomp.c  buffer.c  clips.c  cm.c  cm.h  command.c  copyright++.pl  debug.h  display.c  edit.c  efopen.c  efopen.h  efopen_mkdat.c  errors.c  errors.h  exec.c  ext.c.in  info2cap.c  info2cap.h  info2src.pl  input.c  inputclass.c  keycodes.h  keys.c  makefile  makefile.amiga  menu.c  navigation.c  ne.c  ne.h  ne.texinfo  prefs.c  protos.h  regcomp.c  regex.c  (+35 more)
syntax/: 4gl.jsf  4gl.jsf.in  Makefile.am  Makefile.in  ada.jsf  ant.jsf  asm.jsf.in  asterisk.jsf  awk.jsf  batch.jsf  c.jsf  c.jsf.in  classic_pascal.jsf  cobol.jsf.in  comment_todo.jsf  conf.jsf  csh.jsf.in  csharp.jsf  css.jsf  debian.jsf  diff.jsf.in  differences  elixir.jsf  erb.jsf  erlang.jsf  fortran.jsf.in  git-commit.jsf  go.jsf  haml.jsf  haskell.jsf  haskell.jsf.in  html.jsf  htmlerb.jsf  ini.jsf  iptables.jsf  java.jsf  java.jsf.in  joerc.jsf.in  js.jsf  jsf.jsf  (+47 more)
